# duckdice-bot

./: .copilot-instructions.md  .gitignore  AUTO_UPDATE.md  AUTO_UPDATE_SUMMARY.txt  BET_VALIDATION_IMPLEMENTATION.md  BUGFIX_HTML_REPORT_DATA.md  BUGFIX_INSUFFICIENT_BALANCE.md  BUILD.md  CHANGELOG.md  CHANGES_SUMMARY.txt  CLEANUP_COMPLETE.md  COMPLETE_FEATURES.md  COMPLETION_STATUS.md  COMPREHENSIVE_SESSION3_SUMMARY.md  COMPREHENSIVE_UPGRADE_PLAN.md  CONSOLIDATION_SUMMARY.md  CONTRIBUTING.md  DATABASE_AND_CHARTS.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  ENHANCEMENTS_SUMMARY.md  FAUCET_IMPLEMENTATION_PLAN.md  FAUCET_SESSION3_PROGRESS.md  FEATURES_OVERVIEW.md  FEATURE_RNG_STRATEGY.md  FEATURE_STATUS.md  FINAL_SUMMARY.md  GETTING_STARTED.md  GET_STARTED.md  GIT_PUSH_INSTRUCTIONS.md  GUARDRAILS_IMPLEMENTATION.md  GUI_FIXES.md  GUI_README.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPROVEMENTS_LATEST.md  IMPROVEMENTS_SUMMARY.md  INSTALL.md  INSTALL_FIX.md  LOTTERY_FEATURE.md  (+104 more)
.github/: DEVELOPMENT_GUARDRAILS.md  PYPI_SETUP.md  README.md  copilot-instructions.md  pull_request_template.md
.github/agents/: my-agent.agent.md
.github/workflows/: build-and-release.yml  build-release.yml  build-release.yml.bak  build-release.yml.disabled  ci.yml  comprehensive-ci.yml  pr-validation.yml
app/: README.md  config.py  main.py
app/services/: backend.py
app/state/: store.py
app/ui/: components.py  keyboard.py  layout.py  theme.py
app/utils/: __init__.py  cache.py  errors.py  logger.py  performance.py  retry.py
data/: duckdice_bot.db
docs/: ADAPTIVE_SURVIVAL_GUIDE.md  ADAPTIVE_VOLATILITY_HUNTER_GUIDE.md  AGENT_SYSTEM.md  API_FALLBACK.md  ARCHITECTURE.md  ARCHIVE_README.md  BET_VALIDATION.md  BRANCH_PROTECTION.md  BUILD_WINDOWS.md  CONFIGURATION.md  DATABASE_LOGGING.md  DEPLOYMENT.md  ENHANCED_STRATEGY_INFO.md  FAUCET_GRIND_STRATEGY.md  INSTALLATION.md  PROGRESSIVE_WIN_SCALING_GUIDE.md  PROJECT_STRUCTURE.md  README.md  RELEASE_WORKFLOW.md  RNG_ANALYSIS_TO_STRATEGY_GUIDE.md  ROADMAP.md
docs/ARCHITECTURE/: README.md
docs/INTERFACES/: CLI_GUIDE.md  README.md  TUI_GUIDE.md
docs/STRATEGIES/: COMPARISON.md  COMPOUNDING.md  README.md
docs/archive/: BUGFIX_LIVE_BALANCE.md  BUGFIX_LIVE_STATS_DISPLAY.md  BUGFIX_LOTTERY_CHANCE.md  BUGFIX_MICRO_EXPONENTIAL_CHANCE.md  BUGFIX_MICRO_EXPONENTIAL_MINBET.md  BUGFIX_STREAK_HUNTER.md  BUGFIX_TAKE_PROFIT_NONE.md  CLEANUP_SUMMARY.md  CLI_ENHANCEMENT_COMPLETE.md  CLI_MIGRATION_COMPLETE.md  CLI_UX_IMPROVEMENT.md  COPILOT_SETUP_COMPLETE.md  CURRENCY_FEATURE.md  ENGINE_REFACTORING_COMPLETE.md  FEATURES_COMPLETE.md  FINAL_SESSION_SUMMARY.md  INTERACTIVE_MODE_COMPLETE.md  INTERACTIVE_REDESIGN_COMPLETE.md  INTERFACE_GUIDE.md  MICRO_EXPONENTIAL_COMPARISON.md  MICRO_EXPONENTIAL_STRATEGY.md  NEW_STRATEGY_COMPLETE.md  PARALLEL_BETTING_COMPLETE.md  PARALLEL_QUICK_START.md  REFACTORING_SUMMARY.md  RELEASE_COMPLETE.md  RELEASE_NOTES_v3.10.0.md  SESSION_ANALYSIS_MICRO_EXPONENTIAL.md  SESSION_CONTINUATION_SUMMARY.md  SESSION_FINAL_SUMMARY.md  SPEED_CONTROL_FEATURE.md  SPEED_OPTIMIZATION.md  STRATEGY_COMPARISON_FEATURE.md  STREAK_HUNTER_ENHANCEMENTS.md  TEST_RESULTS.md  TODO_FEATURES.md
docs/tkinter/: TKINTER_ENHANCEMENTS.md  TKINTER_QUICKSTART.md  TKINTER_README.md  TKINTER_SESSION_SUMMARY.md
examples/: demo_strategy_config.py  run_target_aware.py  target_aware_examples.py  use_rng_analysis_strategy.py
examples/strategy_scripts/: conditional_betting.py  profit_target.py  range_dice_example.py  (+1 more)
gui/: __init__.py  analytics.py  analytics_ui.py  app.py  bot_controller.py  charts.py  dashboard.py  database.py  history.py  live_api.py  settings.py  simulator.py  state.py  strategies_ui.py  strategy_integration.py  strategy_loader.py  utils.py
rng_analysis/: STRATEGY_QUICKSTART.md  strategy_generator.py
scripts/: QUICK_DEPLOY.sh  QUICK_START.sh  adaptive_1pct_momentum.lua  autocommit.sh  build.sh  build_release.sh  build_ultimate.sh  clean.sh  compare_strategies.sh  demo_parallel.sh  enhance_strategies.py  pre-commit.sh  release.sh  run_tests.sh  setup.sh  validate-build.sh  verify_target_aware.sh
src/: cli_display.py  simulation_engine.py
tests/: conftest.py  test_agents.py  test_api_fallback.py  test_basic.py  test_cli.py  test_combined_high_roller.py  test_copilot_collections.py  test_database_demo.sh  test_db_write_batching.py  test_engine_lottery.py  test_gui_ultimate.py  test_interactive_demo.sh  test_micro_exponential.py  test_multi_strategy_system.py  test_parallel_engine.py  test_rng_strategy_integration.py  test_strategy_integration.py  test_streak_hunter.sh  test_target_aware.py  test_tle_wager_farming.py  test_wager_loop_stabilizer_v2.py  test_web_runtime_controller.py  test_web_start_validation.py  test_web_strategy_request_validation.py  test_web_stream.py  verify_nano_range.py
(+181 files in other folders)
