[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "duckdice-betbot"
version = "0.2.1"
description = "DuckDice API Python client, CLI, and auto-betting engine with pluggable strategies"
readme = "README.md"
authors = [{ name = "Dennis", email = "schnickfitzel1@gmail.com" }]
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
  "requests>=2.31.0",
  "PyYAML>=6.0.2",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Environment :: Console",
  "Topic :: Utilities",
]
keywords = ["duckdice", "dice", "betting", "cli", "api", "tkinter", "strategy" ]

[project.urls]
Homepage = "https://github.com/sushiomsky/duckdice"
Repository = "https://github.com/sushiomsky/duckdice"

[project.optional-dependencies]
# GUI has no extra pip requirements (tkinter is part of stdlib on many platforms)
# This extra simply enables documenting/advertising the GUI entry point.
# Install: pip install .[gui]
gui = []

[project.scripts]
duckdice = "duckdice_cli.__main__:main"
duckdice-gui = "duckdice_gui_app.gui:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = [
  "duckdice*",
  "duckdice_api*",
  "duckdice_cli*",
  "betbot_engine*",
  "betbot_strategies*",
  "duckdice_gui_app*",
]
