[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "duckdice-betbot"
version = "4.11.1"
description = "DuckDice betting bot with 18 strategies, Monte Carlo simulation, and comprehensive CLI"
readme = "README.md"
authors = [{ name = "Dennis", email = "schnickfitzel1@gmail.com" }]
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
  "requests>=2.31.0",
  "PyYAML>=6.0.2",
  "rich>=13.7.0",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Environment :: Console",
  "Topic :: Utilities",
]
keywords = ["duckdice", "dice", "betting", "cli", "api", "tui", "strategy"]

[project.urls]
Homepage = "https://github.com/sushiomsky/duckdice"
Repository = "https://github.com/sushiomsky/duckdice"

[project.optional-dependencies]
tui = ["textual>=0.47.0"]
gui = []
all = ["textual>=0.47.0"]

[project.scripts]
duckdice = "duckdice_cli:main"
duckdice-compare = "strategy_comparison:main"
duckdice-tui = "duckdice_tui:main"

[tool.setuptools]
# Include both root .py modules AND src packages
py-modules = ["duckdice_cli", "strategy_comparison", "duckdice_tui", "duckdice"]

[tool.setuptools.packages.find]
where = ["src"]
